create project again

--- a/index.html
+++ b/index.html
@@ -1,44 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link 
-    href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@500&family=Work+Sans:wght@700&display=swap" 
-    rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>ProjectNews</title>
-    <link rel="icon" href="./assets/icon.png">
+    <title>RocketNews</title>
+    <link rel="icon" type=".png" href="./assets/icon.png">
 </head>
 <body>
-    <div id="infos">
-        <div id="logo">
-            <img src="./assets/logo.svg" alt="logo">
-        </div>
-        <div id="informacoes">
-            <div id="info1">
-                <p>atualize ideias e informações em 5 minutos.</p>
-            </div>
-            <div id="info2">
-                <p>tudo que você precisa saber para começar seu dia bem e informado</p>
-            </div>
-            <div id="info3">
-                <p>noticias sobre o universo Rocketseat, e tudo o que precisa para começar o dia melhor.
-                    perfeito para se preparar para codar ☕</p>
-            </div>
-        </div>
-        <div id="email">
-            <p>Insira seu e-mail:</p>
-            <form>
-                <button type="submit">Enviar</button>
-              </form>
-        </div>
-    </div>
-
-    <div class="divImage">
-        <img id="imagem" src="./assets/read_news.jpg" alt="Teste">
-    </div>
+    
 </body>
 </html>
