--- a/index.html
+++ b/index.html
@@ -4,10 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!-- GOOGLE FONTES -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <!-- FIM GOOGLE FONTES -->
     <title>RocketNews</title>
     <link rel="icon" type=".png" href="./assets/icon.png">
 </head>
 <body>
-    
+    <header>
+        <div class="interface">
+            <div class="logo">  
+                <a href="#">
+                    <img src="./assets/logo.svg" alt="Logo Site" >
+                </a>
+            </div><!--logo-->
+        </div><!--interface-->
+    </header>
+
+    <main>
+        <section class="topo-do-site">
+            <div class="interface">
+                <div class="flex">
+                    <div class="txt-topo-site">
+                        <h1>atualize ideias e informações em 5 minutos.</h1>
+                        <p>tudo que você precisa saber para começar seu dia bem e informado</p>
+                        <span>noticias sobre o universo Rocketseat, e tudo o que precisa para começar o dia melhor. perfeito para se preparar para codar ☕</span>
+                    </div><!--txt-topo-site-->
+                </div><!--flex-->
+            </div><!--interface-->
+        </section><!--topo-do-site-->
+        <section class="part-email">
+            <div class="text-email">
+                <p>Insira seu e-mail:</p>
+            </div><!--text-email-->
+            <div class="campo-email">
+                <div class="retangulo">
+                </div><!--retangulo-->
+                <input type="email" name="email" id="email" placeholder="exemplo@gmail.com">
+                <div class="button">
+                    <button type="submit"><img src="./assets/send.svg" alt="botão"></button>
+                </div><!--button-->
+            </div><!--campo-email-->
+        </section><!--mail-->
+    </main>
 </body>
-</html>
+</html>    
