--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <link rel="icon" type=".png" href="./assets/icon.png">
 </head>
 <body>
+    <div class="background">
+        <img
+        src="assets/read_news.jpg"
+        alt="imagen de fundo"
+        class="background">
+      </div>
+        
     <header>
         <div class="interface">
             <div class="logo">  
@@ -49,5 +56,6 @@
             </div><!--campo-email-->
         </section><!--mail-->
     </main>
+  
 </body>
 </html>    
