--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <div class="txt-topo-site">
                         <h1>atualize ideias e informações em 5 minutos.</h1>
                         <p>tudo que você precisa saber para começar seu dia bem e informado</p>
-                        <span>noticias sobre o universo Rocketseat, e tudo o que precisa para começar o dia melhor. perfeito para se preparar para codar ☕</span>
+                        <span>noticias sobre o universo Rocketseat, e tudo o que precisa para começar o dia melhor. <br> perfeito para se preparar para codar ☕</span>
                     </div><!--txt-topo-site-->
                 </div><!--flex-->
             </div><!--interface-->
@@ -54,7 +54,22 @@
                     <button type="submit"><img src="./assets/send.svg" alt="botão"></button>
                 </div><!--button-->
             </div><!--campo-email-->
-        </section><!--mail-->
+        </section><!--part-mail-->
+        <section class="info">
+            <a href="#">deixe-me ler primeiro</a>
+            <div class="arrow">
+                <img src="./assets/arrow-right.svg" alt="">
+            </div>
+        </section>
+        <footer>
+            Feito com ❤ por
+            <a
+              href="https://www.linkedin.com/in/jo%C3%A3o-moreira-6aa8251b9"
+              target="_blank"
+            >
+              João Moreira</a
+            >
+        </footer>
     </main>
   
 </body>
