--- a/index.html
+++ b/index.html
@@ -62,13 +62,7 @@
             </div>
         </section>
         <footer>
-            Feito com ❤ por
-            <a
-              href="https://www.linkedin.com/in/jo%C3%A3o-moreira-6aa8251b9"
-              target="_blank"
-            >
-              João Moreira</a
-            >
+            Feito com ❤ por <a href="#">João Moreira</a>
         </footer>
     </main>
   
