adjust title icon

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </section>
         <footer>
-            Feito com ❤ por <a href="#">João Moreira</a>
+            Feito com ❤ por <a href="https://projeto-devlinks.vercel.app/">João Moreira</a>
         </footer>
     </main>
   
