adjust links href

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
             </div><!--campo-email-->
         </section><!--part-mail-->
         <section class="info">
-            <a href="#">deixe-me ler primeiro</a>
+            <a href="https://www.rocketseat.com.br/" target="_blank">deixe-me ler primeiro</a>
             <div class="arrow">
                 <img src="./assets/arrow-right.svg" alt="">
             </div>
         </section>
         <footer>
-            Feito com ❤ por <a href="https://projeto-devlinks.vercel.app/">João Moreira</a>
+            Feito com ❤ por <a href="https://projeto-devlinks.vercel.app/" target="_blank">João Moreira</a>
         </footer>
     </main>
   
